# enterprise-rag

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  logging_config.py  main.py  middleware.py
app/api/: router.py
app/api/schemas/: admin.py  documents.py  evals.py  ingestion_jobs.py  query.py
app/api/v1/: admin.py  documents.py  evals.py  health.py  ingestion_jobs.py  query.py
app/core/: exceptions.py  rate_limit.py  security.py  tenancy.py
app/db/: base.py  session.py
app/db/models/: __init__.py  api_key.py  chunk.py  document.py  eval_run.py  ingestion_job.py  tenant.py
app/generation/: service.py
app/ingestion/: chunking.py  hashing.py  pipeline.py
app/ingestion/loaders/: base.py  docx_loader.py  html_loader.py  pdf_loader.py  registry.py  txt_loader.py
app/observability/: metrics.py  tracing.py
app/observability/evals/: harness.py  (+2 more)
app/providers/: base.py  registry.py
app/retrieval/: prompt.py  reranker.py  retriever.py
app/vectorstore/: base.py  factory.py  pgvector_store.py
app/worker/: queue.py  tasks.py  worker_settings.py
docker/: api.Dockerfile  worker.Dockerfile
docker/postgres/: init.sh
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_pgvector_indexes_rls.py
scripts/: run_eval.py  seed_dev_data.py
tests/evals/: golden_qa.sample.yaml
tests/integration/: conftest.py  test_evals.py  test_ingest_retrieve_generate.py  test_multitenancy_isolation.py  test_rate_limit.py
tests/unit/: test_chunking.py  test_exceptions.py  test_hashing.py  test_loaders.py  test_prompt.py  test_providers.py  test_reranker.py  test_security.py
(+3 files in other folders)
