[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise-grade, multi-tenant Retrieval-Augmented Generation pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "anthropic>=0.40",
    "voyageai>=0.3.1",
    "openai>=1.55",
    "arq>=0.26",
    "redis>=5.2",
    "langchain-text-splitters>=0.3.2",
    "pypdf>=5.1",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.17",
    "structlog>=24.4",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "prometheus-client>=0.21",
    "httpx>=0.27",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7.4",
    "mypy>=1.13",
    "types-pyyaml>=6.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI's Depends() in argument defaults is the idiomatic pattern

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
